--- a/p8105_hw2_sc5978.Rmd
+++ b/p8105_hw2_sc5978.Rmd
@@ -60,7 +60,7 @@ unemployment = read.csv("./data/fivethirtyeight_datasets/unemployment.csv") |>
 ```
 
 Join the datasets by merging snp into pols, and merging unemployment into the result
-```{r merge datasets}
+```{r merge pols, snp, and unemployment}
 ## merging snp into pols then merging unemployment into them
 prob1 = 
   left_join(pols_month, snp) |>
@@ -126,7 +126,7 @@ Gwynnda = read_excel(
 ```
 
 Combine these with the Mr. Trash Wheel dataset to produce a single tidy dataset.
-```{r combine datasets}
+```{r combine trash wheels}
 ## add an additional variable to all datasets
 Prof_trash <- mutate(Prof_trash, trash_wheel = "Professor Trash Wheel")
 Gwynnda <- mutate(Gwynnda, trash_wheel = "Gwynnda Trash Wheel")
@@ -223,7 +223,7 @@ Findings:
 There are `r nrow(participants_only_in_baseline)`participants appear in only the baseline dataset. Their ids are `unique (participants_only_in_baseline$id)`, which means that there isn't follow-up data about their amyloid ratio. There are `r participants_only_in_amyloid |> pull(id) |> unique() |> length()` participants appear in only the amyloid dataset. Their ids are `unique (participants_only_in_amyloid$id)`, which means that they do not have basic demographic information that were measured at the study baseline or they do not meet the stated inclusion criteria (i.e. no MCI at baseline).
 
 Combine the demographic and biomarker datasets so that only participants who appear in both datasets are retained.
-``` {r combine datasets}
+``` {r combine baseline, amyloid}
 prob3 <- inner_join(baseline, amyloid)
 str(prob3)
 ```
