--- a/p8105_hw2_sc5978.md
+++ b/p8105_hw2_sc5978.md
@@ -197,8 +197,6 @@ Prof_trash <- mutate(Prof_trash, trash_wheel = "Professor Trash Wheel")
 Gwynnda <- mutate(Gwynnda, trash_wheel = "Gwynnda Trash Wheel")
 Mr_trash <- mutate(Mr_trash, trash_wheel = "Mr. Trash Wheel")
 
-## Convert year variable in Prof_trash from double to numerical
-
 ## Combine three datasets
 prob2 = bind_rows(Mr_trash, Prof_trash, Gwynnda)
 
@@ -226,20 +224,21 @@ Notice that there are some `NA` values in the `sports_balls`,
 `wrappers`, and `glass_bottles` variables, which indicate that the value
 of these variables is missing at those locations.
 
-Let’s talk about the prob2 datasets. The `Mr_trash` data has 584
-observations and 15 variables and tells us about the weight of trash and
-specific amount in different types of trash in each dumpster for a given
-year from years 2014 to 2023. It also tells us how many homes in
-Maryland can be powered with incinerating trash, the average homes can
-be powered by Mr. Trash Wheel was 54. The `Prof_trash` data has 106
-observations and 14 variables, ranging from years 2017 to 2023. The
-average homes can be powered by Professor Trash Wheel was 34. The
-`Gwynnda` data has 155 observations and 13 variables ranging from years
-2021 to 2023. The average homes can be powered by Gwynnda Trash Wheel
-was 49. The average homes powered by three trash wheels was 50. The
-total weight of trash collected by Professor Trash Wheel was 216.26
-tons. The total number of cigarette butts collected by Gwynnda in July
-of 2021 was 1.63^{4}.
+The `Mr_trash` data has 584 observations and 15 variables and tells us
+about the weight of trash and specific amount in different types of
+trash in each dumpster for a given year from years 2014 to 2023. It also
+tells us how many homes in Maryland can be powered with incinerating
+trash, the average homes can be powered by Mr. Trash Wheel was 54. The
+`Prof_trash` data has 106 observations and 14 variables, ranging from
+years 2017 to 2023. The average homes can be powered by Professor Trash
+Wheel was 34. The `Gwynnda` data has 155 observations and 13 variables
+ranging from years 2021 to 2023. The average homes can be powered by
+Gwynnda Trash Wheel was 49. The average homes powered by three trash
+wheels was 50. The `prob2` data has 845 observations and 15 variables
+and combine information from all three datasets with types of trash
+wheel used. The total weight of trash collected by Professor Trash Wheel
+was 216.26 tons. The total number of cigarette butts collected by
+Gwynnda in July of 2021 was 1.63^{4}.
 
 # Problem 3
 
